--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -283,7 +283,7 @@ section {
 }
 
 #heroHeading {
-    font-size: clamp(2rem, 4.5vw, 4rem);
+    font-size: clamp(2rem, 4vw, 3.5rem);
     background: linear-gradient(90deg, #fff, #b0c4de);
     background-clip: text;
     -webkit-background-clip: text;
